# pydi

./: README.md  pyproject.toml
src/pydi/: __init__.py  main.py
tests/unit_tests/: test_main.py
